feat: Enhance CORS configuration and implement AddHeaderRequestWrapper for user ID handling